# haskell-stream

./: LICENSE  Test.hs  stream.cabal
Data/: Stream.hs
Data/Stream/: Monadic.hs  Step.hs
